--- a/Intensivo-IA/web/styles/app.css
+++ b/Intensivo-IA/web/styles/app.css
@@ -1,30 +1,27 @@
-#app{
+#app {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-#app > h1{
+#app > h1 {
   color: #996dff;
   margin-top: -5px;
 }
 
-#app > h2 , #app > p{
+#app > h2 {
   align-self: flex-start;
-}
-
-#app > h2{
   margin-top: 64px;
 }
 
 #app > p {
+  align-self: flex-start;
   text-align: justify;
   width: 512px;
-
   margin-top: -5px;
 }
 
-#app .placeholder{
+#app .placeholder {
   color: #7c7c8a;
-  user-select: none; /* Impede que selecione o texto */
+  user-select: none;
 }
