--- a/Intensivo-IA/web/styles/base.css
+++ b/Intensivo-IA/web/styles/base.css
@@ -1,20 +1,22 @@
-body{
+body {
   margin: 0;
   padding: 0;
 
+  box-sizing: border-box;
   background-color: #121214;
   color: #fff;
 
-  box-sizing: border-box;
   width: 100%;
   height: 100vh;
-  
+
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
+  align-items: center;
 }
 
-body, input, button{
-  font-family: "Roboto" , sans-serif;
+body,
+button,
+input {
+  font-family: "Roboto", sans-serif;
 }
